lab3/secret-frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secret-frontend

---

apiVersion: v1
kind: Service
metadata:
  name: secret-frontend
  namespace: secret-frontend
  labels:
    tier: secret-frontend
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
  selector:
    tier: secret-frontend
